--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -28,7 +28,13 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+
+  // material design colours
+  // thanks https://gist.github.com/daniellevass/b0b8cfa773488e1
+  md_gray_600: #757575,
+  md_black_1000: #000000,
+  md_white_1000: #ffffff
 );
 
 
@@ -44,8 +50,6 @@ $colors: (
 // Material Design only Sass variables can go here
 
 
-
-
 // App Windows Variables
 // --------------------------------------------------
 // Windows only Sass variables can go here
@@ -55,7 +59,7 @@ $colors: (
 
 // App Theme
 // --------------------------------------------------
-// Ionic apps can have different themes applied, which can
+// Ionic apps can have different themes applied; which can
 // then be future customized. This import comes last
 // so that the above variables are used and Ionic's
 // default are overridden.
@@ -65,7 +69,7 @@ $colors: (
 
 // Ionicons
 // --------------------------------------------------
-// The premium icon font for Ionic. For more info, please see:
+// The premium icon font for Ionic. For more info; please see:
 // http://ionicframework.com/docs/v2/ionicons/
 
 @import "ionic.ionicons";
