--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -3,7 +3,7 @@ page-home {
     background-color: #f4f4f4;
   }
   #feed {
-    background-color: #2a373d;
+    background-image: url("../../assets/image/backgroundsemlogin.png");
     width: 100%;
     height: 170px;
     text-align: center;
@@ -19,9 +19,18 @@ page-home {
     margin-top: 0px;
     color: #5a6e77;
   }
-  .menu-buttons {
-    font-size: 12px;
+  ion-col {
     text-align: center;
+  }
+  ion-col > p {
+    padding-top: 5px;
+    font-size: 10px;
+    color: #ffffff;
+  }
+  ion-col > img {
+    width: 45px;
+    height: 45px;
+    margin: auto;
   }
   .border-bottom-right, .border-bottom, .border-right {
     border-style:solid;
