Background side-menu atualizado

--- a/src/components/menu/menu.html
+++ b/src/components/menu/menu.html
@@ -1,10 +1,10 @@
+<ion-header id="container" no-border>
+  <ion-footer no-border>
+    <ion-label color="md_white_1000" padding-left>{{nome}}</ion-label>
+    <ion-label color="md_white_1000" padding-left>{{nis}}</ion-label>
+  </ion-footer>
+</ion-header>
 <ion-content>
-  <ion-toolbar color="primary">
-    <ion-footer no-border>
-      <ion-label color="md_white_1000" padding-left>{{nome}}</ion-label>
-      <ion-label color="md_white_1000" padding-left>{{nis}}</ion-label>
-    </ion-footer>
-  </ion-toolbar>
   <ion-list>
     <ion-item no-lines>
       <ion-label color="md_gray_600">
