--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -1,8 +1,13 @@
 side-menu-component {
-  ion-toolbar {
+  #container {
+    background-image: url("../assets/image/backgroundlateral.png");
+    background-size: 100% 100%;
     height: 115px;
   }
   ion-label {
     font-size: 16px;
+  }
+  ion-content {
+    margin-top: 115px;
   }
 }
