Inserir número do NIS adicionado

--- a/src/components/menu/menu.html
+++ b/src/components/menu/menu.html
@@ -1,4 +1,4 @@
-<ion-header id="container" no-border>
+<ion-header id="header" no-border>
   <ion-footer no-border>
     <ion-label color="md_white_1000" padding-left>{{nome}}</ion-label>
     <ion-label color="md_white_1000" padding-left>{{nis}}</ion-label>
