--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -1,5 +1,5 @@
 side-menu-component {
-  #container {
+  #header {
     background-image: url("../assets/image/backgroundlateral.png");
     background-size: 100% 100%;
     height: 115px;
