Mudança de diretório components/menu para pages/menu

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,5 @@
 <ion-menu [content]="content">
-  <side-menu-component></side-menu-component>
+  <side-menu></side-menu>
 </ion-menu>
 
 <ion-nav #content [root]="rootPage"></ion-nav>
