--- a/src/pages/menu/menu.scss
+++ b/src/pages/menu/menu.scss
@@ -1,4 +1,4 @@
-side-menu-component {
+side-menu {
   #header {
     background-image: url("../assets/image/backgroundlateral.png");
     background-size: 100% 100%;
