--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,6 +1,11 @@
 page-home {
-  .background {
-    background-color: color($colors, light);
+  ion-col {
+    text-align: center;
+    img {
+      width: 45px;
+      height: 45px;
+      margin: auto;
+    }
   }
   #feed {
     background-image: url("../assets/image/backgroundsemlogin.png");
@@ -8,33 +13,20 @@ page-home {
     width: 100%;
     height: 170px;
     text-align: center;
+    img {
+      height: 60%;
+    }
+    h5 {
+      margin-bottom: 0px;
+      color: white;
+    }
+    p {
+      margin-top: 0px;
+      color: #5a6e77;
+    }
   }
-  #feed > img {
-    height: 60%;
-  }
-  #feed > h5 {
-    margin-bottom: 0px;
-    color: white;
-  }
-  #feed > p {
-    margin-top: 0px;
-    color: #5a6e77;
-  }
-  ion-col {
-    text-align: center;
-  }
-  //
-  // ion-col > p não é possível alterar a cor e a fonte
-  //
-  .text-button {
-    padding-top: 10px;
-    color: color($colors, md_gray_600);
-    font-size: 11px;
-  }
-  ion-col > img {
-    width: 45px;
-    height: 45px;
-    margin: auto;
+  .background {
+    background-color: color($colors, light);
   }
   .border-bottom-right, .border-bottom, .border-right {
     border-style:solid;
@@ -48,5 +40,10 @@ page-home {
   }
   .border-bottom {
     border-width: 0px 0px 2px 0px;
+  }
+  .text-button {
+    padding-top: 10px;
+    color: color($colors, md_gray_600);
+    font-size: 11px;
   }
 }
