Tela interatividade provisória

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -7,7 +7,7 @@ page-home {
       margin: auto;
     }
   }
-  #feed {
+  #dynamic {
     background-image: url("../assets/image/backgroundsemlogin.png");
     background-size: 100% 100%;
     width: 100%;
