Tela calendário provisória

--- a/src/pages/calendario/calendario.scss
+++ b/src/pages/calendario/calendario.scss
@@ -1,4 +1,4 @@
-page-interatividade {
+page-calendario {
   #info {
     background-image: url("../assets/image/backgroundsemlogin.png");
     background-size: 100% 100%;
