Div com usuario logado atualizada

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -33,6 +33,7 @@ $colors: (
   // material design colours
   // thanks https://gist.github.com/daniellevass/b0b8cfa773488e1
   md_gray_600: #757575,
+  md_orange_100: #FFE0B2,
   md_black_1000: #000000,
   md_white_1000: #ffffff
 );
