--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -7,7 +7,53 @@ page-home {
       margin: auto;
     }
   }
-  #dynamic {
+  #logged {
+    background-image: url("../assets/image/backgroundcomlogin.png");
+    background-size: 100% 100%;
+    width: 100%;
+    height: 170px;
+    text-align: center;
+
+    ion-toolbar {
+      width: 100%;
+      position: relative;
+      bottom: -25px;
+    }
+    h1 {
+      margin-top: 0px;
+      color: white;
+    }
+    p {
+      margin-bottom: 0px;
+      color:  color($colors, md_orange_100);
+    }
+    .box-content {
+      width: 130px;
+      height: 25px;
+      margin: 0 auto;
+
+      ion-label {
+        color:  color($colors, md_orange_100);
+        font-size: 9px;
+        margin-bottom: 0px;
+        margin-top: 0px;
+        float: left;
+      }
+      img {
+        height: 22px;
+        width: 34px;
+        float: left;
+        padding-right: 7px;
+      }
+      p {
+        color: white;
+        margin-top: 0px;
+        font-size: 12px;
+        float: left;
+      }
+    }
+  }
+  #not-logged {
     background-image: url("../assets/image/backgroundsemlogin.png");
     background-size: 100% 100%;
     width: 100%;
