--- a/src/pages/calendario/calendario.scss
+++ b/src/pages/calendario/calendario.scss
@@ -1,6 +1,6 @@
 page-calendario {
   #info {
-    background-image: url("../assets/image/backgroundsemlogin.png");
+    background-color: color($colors, primary);
     background-size: 100% 100%;
     width: 100%;
     height: 170px;
@@ -11,6 +11,19 @@ page-calendario {
     p {
       margin-top: 0px;
       color: white;
+    }
+  }
+  ion-card-header {
+    text-align: center;
+  }
+  .next-pay {
+    h1 {
+      margin-top: 0px;
+      color: white;
+    }
+    p {
+      margin-bottom: 0px;
+      color:  color($colors, md_orange_100);
     }
   }
 }
