--- a/src/pages/interatividade/interatividade.scss
+++ b/src/pages/interatividade/interatividade.scss
@@ -1,6 +1,6 @@
 page-interatividade {
   #info {
-    background-image: url("../assets/image/backgroundsemlogin.png");
+    background-color: color($colors, primary);;
     background-size: 100% 100%;
     width: 100%;
     height: 170px;
@@ -12,5 +12,8 @@ page-interatividade {
       margin-top: 0px;
       color: white;
     }
+  }
+  ion-card-header {
+    text-align: center;
   }
 }
