Serviço do Calendário de Pagamentos adicionado

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -25,7 +25,7 @@ $font-path: "../assets/fonts";
 
 $colors: (
   primary:    #ffa000,
-  secondary:  #32db64,
+  secondary:  #387ef5,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
