--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -7,17 +7,17 @@ page-home {
       margin: auto;
     }
   }
-  #logged {
+  #custom-content {
     background-image: url("../assets/image/backgroundcomlogin.png");
     background-size: 100% 100%;
     width: 100%;
-    height: 170px;
+    height: 200px;
     text-align: center;
 
     ion-toolbar {
       width: 100%;
       position: relative;
-      bottom: -25px;
+      bottom: -38px;
     }
     h1 {
       margin-top: 0px;
@@ -53,11 +53,11 @@ page-home {
       }
     }
   }
-  #not-logged {
+  #default-content {
     background-image: url("../assets/image/backgroundsemlogin.png");
     background-size: 100% 100%;
     width: 100%;
-    height: 170px;
+    height: 200px;
     text-align: center;
     img {
       height: 60%;
