--- a/src/pages/sobre/sobre.scss
+++ b/src/pages/sobre/sobre.scss
@@ -1,9 +1,9 @@
 page-sobre {
-  #info {
+  #head-content {
     background-color: color($colors, primary);
     background-size: 100% 100%;
     width: 100%;
-    height: 170px;
+    height: 200px;
     text-align: center;
     img {
       height: 40%;
@@ -15,5 +15,22 @@ page-sobre {
   }
   ion-card-header {
     text-align: center;
+  }
+  details {
+    border-radius: 3px;
+    border: 1px solid color($colors, light);
+  }
+  details summary {
+    font-size: 16px;
+    color: #757575;
+    vertical-align: top;
+    border-radius: 3px;
+    padding: 5px 10px;
+    outline: none;
+  }
+  details summary::-webkit-details-marker {
+    color: color($colors, primary);
+    /* Hide the default marker. */
+    // display: none;
   }
 }
