--- a/src/pages/interatividade/interatividade.scss
+++ b/src/pages/interatividade/interatividade.scss
@@ -1,5 +1,5 @@
 page-interatividade {
-  #info {
+  #head-content {
     background-color: color($colors, primary);;
     background-size: 100% 100%;
     width: 100%;
