--- a/src/pages/mensagens/mensagens.scss
+++ b/src/pages/mensagens/mensagens.scss
@@ -1,12 +1,12 @@
 page-mensagens {
-  #info {
-    background-color: color($colors, primary);
+  #head-content {
+    background-image: url("../assets/image/backgroundcomlogin.png");
     background-size: 100% 100%;
     width: 100%;
-    height: 170px;
+    height: 200px;
     text-align: center;
     img {
-      height: 40%;
+      height: 45%;
     }
     p {
       margin-top: 0px;
@@ -15,5 +15,34 @@ page-mensagens {
   }
   ion-card-header {
     text-align: center;
+  }
+
+  ion-toolbar {
+    width: 100%;
+    position: relative;
+    bottom: -16px;
+  }
+  h1 {
+    margin-top: 0px;
+    color: white;
+  }
+  p {
+    margin-bottom: 0px;
+    color:  color($colors, md_orange_100);
+  }
+  .box-content {
+    width: 130px;
+    height: 25px;
+    margin: 0 auto;
+    p {
+      color: white;
+      margin-top: 0px;
+      font-size: 16px;
+    }
+  }
+  .border-right {
+    border-style:solid;
+    border-color: color($colors, light);
+    border-width: 0px 2px 0px 0px;
   }
 }
