Adiciona calendário component
+ Tira 'public' das funções
+ Adiciona imagem bolsa-familia e cartão nis
+ Cria pacote components

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,5 @@
 <ion-menu [content]="content">
-  <side-menu></side-menu>
+  <menu-component></menu-component>
 </ion-menu>
 
 <ion-nav #content [root]="rootPage"></ion-nav>
