--- a/src/components/menu/menu.component.html
+++ b/src/components/menu/menu.component.html
@@ -24,12 +24,12 @@
         Calendário de pagamentos
       </ion-label>
     </ion-item>
-    <ion-item no-lines>
+    <!-- <ion-item no-lines>
       <ion-label color="md_gray_600">
         <ion-icon name="logo-usd" color="md_gray_600" padding-right></ion-icon>
         Extrato
       </ion-label>
-    </ion-item>
+    </ion-item> -->
     <ion-item no-lines>
       <ion-label color="md_gray_600">
         <ion-icon name="qr-scanner" color="md_gray_600" padding-right></ion-icon>
