--- a/src/pages/calendario/calendario.scss
+++ b/src/pages/calendario/calendario.scss
@@ -1,16 +1,20 @@
 page-calendario {
-  #info {
+  #head-content {
     background-color: color($colors, primary);
     background-size: 100% 100%;
     width: 100%;
-    height: 170px;
+    height: 200px;
     text-align: center;
     img {
-      height: 40%;
+      height: 50%;
+      margin-bottom: 25px;
     }
     p {
       margin-top: 0px;
       color: white;
+    }
+    ion-item {
+      font-size: 15px;
     }
   }
   ion-card-header {
