--- a/src/pages/atendimento/atendimento.scss
+++ b/src/pages/atendimento/atendimento.scss
@@ -1,19 +1,24 @@
 page-atendimento {
-  #info {
+  #head-content {
     background-color: color($colors, primary);
     background-size: 100% 100%;
     width: 100%;
-    height: 170px;
+    height: 200px;
     text-align: center;
     img {
-      height: 40%;
+      height: 28%;
     }
     p {
       margin-top: 0px;
       color: white;
     }
+    ion-item {
+      font-size: 14px;
+      margin-bottom: 2px;
+    }
   }
-  ion-card-header {
-    text-align: center;
+  #preview-map {
+    height: 100%;
+    width: 100%;
   }
 }
