Adiciona pacote dao
+ Renomea todas as classes
+ Muda pacote modal-nis para dentro de home/

--- a/src/pages/others/others.scss
+++ b/src/pages/others/others.scss
@@ -1,4 +1,4 @@
-page-sobre {
+page-others {
   #head-content {
     background-color: color($colors, primary);
     background-size: 100% 100%;
@@ -6,7 +6,7 @@ page-sobre {
     height: 200px;
     text-align: center;
     img {
-      height: 40%;
+      height: 50%;
     }
     p {
       margin-top: 0px;
