--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -1,4 +1,4 @@
-page-outros-programas {
+page-about {
   #head-content {
     background-color: color($colors, primary);
     background-size: 100% 100%;
@@ -6,7 +6,7 @@ page-outros-programas {
     height: 200px;
     text-align: center;
     img {
-      height: 50%;
+      height: 40%;
     }
     p {
       margin-top: 0px;
