--- a/src/pages/attendance/attendance.scss
+++ b/src/pages/attendance/attendance.scss
@@ -1,4 +1,4 @@
-page-atendimento {
+page-attendance {
   #head-content {
     background-color: color($colors, primary);
     background-size: 100% 100%;
