--- a/src/pages/calendar/calendar.scss
+++ b/src/pages/calendar/calendar.scss
@@ -1,4 +1,4 @@
-page-calendario {
+page-calendar {
   #head-content {
     background-color: color($colors, primary);
     background-size: 100% 100%;
