--- a/src/pages/interactive/interactive.scss
+++ b/src/pages/interactive/interactive.scss
@@ -1,12 +1,12 @@
-page-extrato {
-  #info {
-    background-color: color($colors, primary);
+page-interactive {
+  #head-content {
+    background-color: color($colors, primary);;
     background-size: 100% 100%;
     width: 100%;
-    height: 170px;
+    height: 200px;
     text-align: center;
     img {
-      height: 40%;
+      height: 60%;
     }
     p {
       margin-top: 0px;
