--- a/src/pages/messages/messages.scss
+++ b/src/pages/messages/messages.scss
@@ -1,4 +1,4 @@
-page-mensagens {
+page-messages {
   #head-content {
     background-image: url("../assets/image/backgroundcomlogin.png");
     background-size: 100% 100%;
