--- a/src/pages/statement/statement.scss
+++ b/src/pages/statement/statement.scss
@@ -1,12 +1,12 @@
-page-interatividade {
-  #head-content {
-    background-color: color($colors, primary);;
+page-statement {
+  #info {
+    background-color: color($colors, primary);
     background-size: 100% 100%;
     width: 100%;
-    height: 200px;
+    height: 170px;
     text-align: center;
     img {
-      height: 60%;
+      height: 40%;
     }
     p {
       margin-top: 0px;
